--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Docked - Portainer Container Manager" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐳</text></svg>" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/image.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/image.png" />
+    <link rel="apple-touch-icon" href="/img/image.png" />
     <title>Docked</title>
   </head>
   <body>
